Center login page form and fix clipping left side of input fields.

--- a/ProjectSourceCode/src/resources/css/style.css
+++ b/ProjectSourceCode/src/resources/css/style.css
@@ -16,11 +16,11 @@
   border-right: none;
 }
 
-.form-control {
+.navbar-form .form-control {
   border-left: none;
 }
 
-.form-control:focus {
+.navbar-form .form-control:focus {
   box-shadow: none;
   border-color: #ced4da;
 }
